fix p el alignment

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ h2 {
   font-size: 1.8rem;
   width: max-content;
   word-break: break-all;
+  text-align: center;
 }
 
 p {
@@ -108,6 +109,7 @@ img {
   justify-content: center;
   gap: 1rem;
   max-width: 50rem;
+
   /* background-color: var(--primary-text-container-color);
   padding: var(--padding-mobile);
   box-shadow: var(--container-shadow);
