--- a/src/pages/FuneralPage/FuneralPage.css
+++ b/src/pages/FuneralPage/FuneralPage.css
@@ -3,6 +3,10 @@
   font-size: 1rem;
 }
 
+#stubbornP {
+  align-self: flex-start !important;
+}
+
 @media (min-width: 900px) {
   .wedding-list-item {
     font-size: 1.2rem;
